--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,42 @@
+#关闭缓存，即使刷新
+#spring.thymeleaf.cache=false
+spring.thymeleaf.cache=true
 
+#热部署生效
+spring.devtools.restart.enabled=true
+#设置重启的目录，添加那个目录的文件需要restart
+spring.devtools.restart.additional-paths=src/main/java
+#
+
+
+#配置api端口号
+server.port=8088
+#配置context-path，一般来说这个配置在正式发布的时候不配置
+server.servlet.context-path=/imooc
+#错误页，指定发生错误时，跳转的URL， >BasicErrorController
+#server.error.path=/error
+#session最大超时时间（分钟），默认为30分钟
+server.servlet.session.timeout=60
+#该服务绑定IP地址，启动服务器时如本机不是该IP地址则抛出异常启动失败，
+#之有特殊需求的情况下才配置，具体根据各自的业务来设置
+#server.address=192.168.1.27
+
+#################################################################
+# Server - tomcat 相关常用配置
+#################################################################
+#tomcat最大线程数，默认为200
+server.tomcat.max-threads=250
+#tomcat的URI编码
+server.tomcat.uri-encoding=utf-8
+#存放Tomcat的日志、Dump等文件的临时文件夹，默认为系统的temp文件夹
+#（如：C:\Users\Shanhy\AppData\Local\Temp）
+server.tomcat.basedir=D:/springboot-tomcat-temp
+#打开tomcat的Access日志，并可以设置日志格式的方法
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.pattern=clj
+#accesslog目录，默认在basedir/logs
+#server.tomcat.accesslog.directory=
+#日志文件目录
+logging.file.path=D:/tomcat-log
+#日志文件名称，默认为spring.log
+#logging.file=myapp.log
