前端框架freemarker与htymeleaf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #关闭缓存，即使刷新
 #spring.thymeleaf.cache=false
-spring.thymeleaf.cache=true
+spring.thymeleaf.cache=false
 
 #热部署生效
 spring.devtools.restart.enabled=true
@@ -40,3 +40,43 @@ server.tomcat.accesslog.pattern=clj
 logging.file.path=D:/tomcat-log
 #日志文件名称，默认为spring.log
 #logging.file=myapp.log
+
+#设定静态文件路径，js，css等
+spring.mvc.static-path-pattern=/static/**
+
+########################################################
+#
+# freemarker 静态资源配置
+#
+########################################################
+#设定ftl文件路径
+spring.freemarker.template-loader-path=classpath:/templates
+#关闭缓存，及时刷新，上线生产环境需要改为true
+spring.freemarker.cache=false
+spring.freemarker.charset=UTF-8
+spring.freemarker.check-template-location=true
+spring.freemarker.content-type=text/html
+spring.freemarker.expose-request-attributes=true
+spring.freemarker.expose-session-attributes=true
+spring.freemarker.request-context-attribute=request
+spring.freemarker.suffix=.ftl
+
+########################################################
+#
+# thymeleaf 静态资源配置
+#
+########################################################
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
+
+########################################################
+#
+# 配置i18n 资源文件，共thymeleaf 读取
+#
+########################################################
+spring.messages.basename=i18n/messages
+spring.messages.cache-duration=3600
+spring.messages.encoding=UTF-8
