--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,13 @@ spring.thymeleaf.cache=false
 spring.devtools.restart.enabled=true
 #设置重启的目录，添加那个目录的文件需要restart
 spring.devtools.restart.additional-paths=src/main/java
-#
+#为Mybatis设置，生产环境可删除
+restart.include.mapper=/mapper-[\\w-\\.]+jar
+restart.include.pagehelper=/pagehelper-[\\w-\\.]+jar
+#排除那个目录的文件不需要restart
+#spring.devtools.restart.exclude=static/*,public/*
+#classpath目录下的WEB_INF文件夹内容修改不重启
+spring.devtools.restart.exclude=WEB_INF/**
 
 
 #配置api端口号
